hard-gists/8616550/run.log
=== Docker Run Log for 8616550 ===
Started at: Mi 29. Okt 17:51:47 CET 2025

[2025-10-29 17:51:48] START: Running container for 8616550
[2025-10-29 17:51:48] SUCCESS: Container 7d7572c3bf1bd47f9380abeb3a3949cd1eed5d0e4b14b1490e126ae770441be6 started for 8616550
=== Container logs for 8616550 ===
  File "/snippet.py", line 74
    print "Image path is required"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8616550 ===
[2025-10-29 17:51:50] INFO: Container 7d7572c3bf1bd47f9380abeb3a3949cd1eed5d0e4b14b1490e126ae770441be6 has stopped
